# date-line-charts

./: .dockerignore  Cargo.toml  Dockerfile  shell.nix
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
crates/command_use_case/: Cargo.toml
crates/command_use_case/src/: command_use_case.rs  lib.rs
crates/command_use_case/src/command_use_case/: create_chart.rs  create_data_point.rs  delete_chart.rs  delete_data_point.rs  port.rs  update_chart.rs  update_data_point.rs
crates/command_use_case/src/command_use_case/create_chart/: chart_repository.rs
crates/command_use_case/src/command_use_case/port/: chart_repository.rs  data_point_repository.rs
crates/domain/: Cargo.toml
crates/domain/src/domain/: value_object.rs
crates/domain/src/domain/aggregate/: chart.rs
crates/domain/src/domain/value_object/: date_time.rs  version.rs
crates/file_system_store/: Cargo.toml
crates/file_system_store/src/: file_system_store.rs  lib.rs
crates/file_system_store/src/file_system_store/: file_system_chart_store.rs  file_system_data_point_store.rs
crates/firestore_client/: Cargo.toml
crates/firestore_client/src/: firestore_client.rs  lib.rs
crates/firestore_client/tests/: lib.rs
crates/firestore_store/: Cargo.toml
crates/firestore_store/src/: firestore_store.rs  lib.rs
crates/firestore_store/src/firestore_store/: converter.rs  firestore_chart_store.rs  firestore_client.rs  firestore_data_point_store.rs  firestore_event_store.rs  firestore_query_data_store.rs  path.rs  schema.rs
crates/firestore_store/src/firestore_store/path/: event_stream.rs
crates/firestore_store/src/firestore_store/schema/: chart_event_data_document_data.rs  data_point_event_data_document_data.rs
crates/in_memory_app/: Cargo.toml
crates/in_memory_app/src/: in_memory_app.rs  lib.rs
crates/in_memory_app/src/in_memory_app/: chart_database.rs
crates/in_memory_store/: Cargo.toml
crates/in_memory_store/src/: in_memory_store.rs  lib.rs
crates/in_memory_store/src/in_memory_store/: in_memory_chart_store.rs  in_memory_data_point_store.rs
crates/main/: Cargo.toml
crates/main/src/: main.rs
crates/main/src/subcommand/: server.rs
crates/main/src/subcommand/server/handler/: create_chart.rs  list_charts.rs  update_chart.rs
crates/query_use_case/: Cargo.toml
crates/query_use_case/src/: lib.rs  query_use_case.rs
crates/query_use_case/src/query_use_case/: get_chart.rs  get_data_point.rs  list_charts.rs  list_data_points.rs  port.rs
crates/query_use_case/src/query_use_case/port/: chart_reader.rs  data_point_reader.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  server.rs
crates/server/src/query_use_case/: get_chart.rs
crates/server/src/server/: app.rs  app_state.rs  handler.rs
crates/server/src/server/handler/: create_chart.rs  create_data_point.rs  delete_chart.rs  delete_data_point.rs  get_chart.rs  get_data_point.rs  list_charts.rs  list_data_points.rs  update_chart.rs  update_data_point.rs
crates/write_model/: Cargo.toml
crates/write_model/src/: lib.rs  write_model.rs
crates/write_model/src/write_model/: aggregate.rs  event.rs  value_object.rs
crates/write_model/src/write_model/aggregate/: chart.rs  data_point.rs
crates/write_model/src/write_model/aggregate/chart/: event.rs
crates/write_model/src/write_model/aggregate/data_point/: event.rs
crates/write_model/src/write_model/value_object/: chart_id.rs  data_point_id.rs  date_time.rs  event_id.rs  event_stream_id.rs  version.rs  x_value.rs  y_value.rs
src/: command_use_case.rs  main.rs  query_use_case.rs
src/command_use_case/: create_chart.rs  delete_chart.rs  update_chart.rs
src/query_use_case/: list_charts.rs  show_chart.rs
src/subcommand/: server.rs
src/subcommand/server/: handler.rs
src/subcommand/server/handler/: create_chart.rs  delete_chart.rs  get_chart.rs  show_chart.rs  show_root.rs
terraform/: .gitignore
terraform/environments/dev/: backend.tf  locals.tf  main.tf  outputs.tf
terraform/modules/artifact_registry/: main.tf
terraform/modules/cloud_run/: main.tf  outputs.tf  variables.tf
terraform/modules/firestore/: main.tf  outputs.tf
