[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
command_use_case = { path = "crates/command_use_case" }
mockall = { version = "0.12.1" }
query_use_case = { path = "crates/query_use_case" }
server = { path = "crates/server" }
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
write_model = { path = "crates/write_model" }
