[package]
name = "command_use_case"
edition = "2021"
publish = false

[dependencies]
async-trait.workspace = true
domain = { path = "../domain" }
mockall = { workspace = true, optional = true }
thiserror.workspace = true

[dev-dependencies]
mockall.workspace = true

[features]
test-util = ["dep:mockall"]
