[package]
name = "command_use_case"
edition = "2021"
publish = false

[dependencies]
async-trait.workspace = true
mockall = { workspace = true, optional = true }
thiserror.workspace = true
write_model = { path = "../write_model" }

[dev-dependencies]
mockall.workspace = true

[features]
test-util = ["dep:mockall"]
