[package]
name = "command_use_case"
edition = "2021"
publish = false

[dependencies]
async-trait.workspace = true
mockall = { workspace = true, optional = true }
thiserror.workspace = true
tracing.workspace = true
write_model.workspace = true

[dev-dependencies]
mockall.workspace = true

[features]
test-util = ["dep:mockall"]

[lints.clippy]
blocks_in_conditions = "allow"
