[package]
name = "file_system_store"
edition = "2021"
publish = false

[dependencies]
async-trait.workspace = true
command_use_case.workspace = true
query_use_case.workspace = true
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
tokio = { features = ["sync"], workspace = true }
write_model.workspace = true

[dev-dependencies]
anyhow.workspace = true
tempdir = "0.3.7"
