[package]
name = "firestore_client"
edition = "2021"
publish = false

[dependencies]
async-trait.workspace = true
firestore-path = "0.9.18"
firestore-structured-query = "0.9.10"
google-api-proto = { version = "1.673.0", features = ["google-firestore-v1"] }
google-cloud-auth = { version = "0.15.0", default-features = false, features = [
  "rustls-tls",
] }
google-cloud-token = "0.1.2"
prost = "0.13.1"
prost-types = "0.12.6"
serde = { version = "1.0.203", features = ["derive"] }
serde-firestore-value = "0.8.1"
serde_json = "1.0.117"
thiserror.workspace = true
tokio.workspace = true
tonic = { version = "0.11", features = ["tls-webpki-roots"] }

[dev-dependencies]
anyhow.workspace = true
