[package]
name = "firestore_store"
edition = "2021"
publish = false

[dependencies]
async-trait.workspace = true
command_use_case.workspace = true
firestore_client.workspace = true
query_use_case.workspace = true
serde.workspace = true
serde_json = "1.0.117"
thiserror.workspace = true
tokio.workspace = true
write_model.workspace = true

[dev-dependencies]
anyhow.workspace = true
