[package]
name = "in_memory_store"
edition = "2021"
publish = false
# workaround for <https://github.com/LukeMathWalker/cargo-chef/issues/265>
version = "0.0.0"

[dependencies]
async-trait.workspace = true
command_use_case.workspace = true
query_use_case.workspace = true
tokio.workspace = true
write_model.workspace = true
