[package]
name = "date-line-charts"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
clap = { version = "4.5.4", features = ["derive", "env"] }
file_system_store.workspace = true
in_memory_store.workspace = true
server.workspace = true
tokio.workspace = true
