[package]
name = "date-line-charts"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
clap = { version = "4.5.4", features = ["derive", "env"] }
firestore_store.workspace = true
file_system_store.workspace = true
in_memory_store.workspace = true
server.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
