[package]
name = "query_use_case"
edition = "2021"
publish = false

[dependencies]
async-trait.workspace = true
mockall = { workspace = true, optional = true }
thiserror.workspace = true
write_model.workspace = true

[dev-dependencies]
mockall.workspace = true

[features]
test-util = ["dep:mockall"]
