[package]
name = "query_use_case"
edition = "2021"
publish = false
# workaround for <https://github.com/LukeMathWalker/cargo-chef/issues/265>
version = "0.0.0"

[dependencies]
async-trait.workspace = true
mockall = { workspace = true, optional = true }
thiserror.workspace = true
write_model.workspace = true

[dev-dependencies]
mockall.workspace = true

[features]
test-util = ["dep:mockall"]
