[package]
name = "server"
edition = "2021"
publish = false

[dependencies]
axum = "0.7.5"
command_use_case = { path = "../command_use_case" }
query_use_case = { path = "../query_use_case" }
serde = { version = "1.0.202", features = ["derive"] }
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
anyhow = "1.0.86"
command_use_case = { path = "../command_use_case", features = ["test-util"] }
query_use_case = { path = "../query_use_case", features = ["test-util"] }
serde_json = "1.0.117"
tower = { version = "0.4.13", features = ["util"] }
