[package]
name = "write_model"
edition = "2021"
publish = false
# workaround for <https://github.com/LukeMathWalker/cargo-chef/issues/265>
version = "0.0.0"

[dependencies]
chrono = "0.4.38"
thiserror.workspace = true
uuid = { version = "1.8.0", features = ["v4"] }

[dev-dependencies]
anyhow.workspace = true
